# ci-submodule-helper

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  testlib.cpp  testlib.h
cpm/: CMakeLists.txt
